[tool.poetry]
name = "lista"
version = "0.1.0"
description = ""
authors = ["Julian Streit <julian.streit@ocell.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.2+cpu", source = "pytorch-cpu-src"}
torchvision = {version = "^0.16.2+cpu", source = "pytorch-cpu-src"}
torchaudio = {version = "^2.1.2+cpu", source = "pytorch-cpu-src"}
pandas = "^2.2.0"
matplotlib = "^3.8.2"
wandb = "^0.16.2"
scipy = "^1.11.4"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
