[tool.poetry]
name = "lista"
version = "0.1.0"
description = ""
authors = ["Julian Streit <julian.streit@ocell.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = { version = "2.0.1", source = "torch-stable" }
torchvision = { version = "0.15.2", source = "torch-stable" }
torchaudio = { version = "2.0.2", source = "torch-stable" }
wandb = "^0.16.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
pandas = "^2.2.0"

[[tool.poetry.source]]
name = "torch-stable"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
